--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <div class="container">
     <h1>Hello 👋</h1>
-    <p>This is a sample index.html page.</p>
+    <p>Welcome To The DEVOPS Project</p>
   </div>
 </body>
 </html>
